<resources>
    <string name="app_name">NasaApp</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="fab_button_content_description">Fab button</string>
    <string name="baseWikiURL">http://en.wikipedia.org/wiki/%s</string>
    <string name="before_yestarday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="hd">HD</string>
    <string name="retry_request">"Попробуйте заного"</string>
    <string name="snackbar_retry_message">Retry</string>
    <string name="home">Home</string>
    <string name="api_key_is_blank">API ключ пустой</string>
    <string name="theme_menu_title">Theme</string>
    <string name="title_theme_chooser">Выберите тему:</string>
    <string name="solar_flare_begin_time">Время начала: %s</string>
    <string name="solar_flare_end_time">Время конца: %s</string>
    <string name="solar_flare_peak_time">Пиковое время: %s</string>
    <string name="solar_flare_location">Местоположение: %s</string>
    <string name="mars_info">Марс — четвёртая по удалённости от Солнца и седьмая по размеру планета Солнечной системы; масса планеты составляет 10,7 % массы Земли.Перейти к разделу «#Основные сведения» Названа в честь Марса — древнеримского бога войны, соответствующего древнегреческому Аресу.Перейти к разделу «#В античной мифологии» Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом — γ-оксидом железа(III).Перейти к разделу «#Грунт» Марс — планета земной группы с разреженной атмосферой (давление на поверхности в 160 раз меньше земного).Перейти к разделу «#Атмосфера и климат» Особенностями поверхностного рельефа Марса можно считать ударные кратеры наподобие лунных, а также вулканы, долины, пустыни и полярные ледниковые шапки наподобие земных.Перейти к разделу «#Лёд и полярные шапки» У Марса есть два естественных спутника — Фобос и Деймос (в переводе с древнегреческого — «страх» и «ужас», имена двух сыновей Ареса, сопровождавших его в бою), которые относительно малы (Фобос — 26,8×22,4×18,4 км, Деймос — 15×12,2×10,4 км)[9][10] и имеют неправильную форму.Перейти к разделу «#Спутники» Начиная с 1960-х годов непосредственным исследованием Марса с помощью АМС занимались СССР (программы «Марс» и «Фобос»), США (программы «Маринер», «Викинг», «Mars Global Surveyor» и другие), Европейское космическое агентство (программа «Марс-экспресс») и Индия (программа «Мангальян»). На сегодняшний день, после Земли, Марс — наиболее подробно изученная планета Солнечной системы.Перейти к разделу «#История изучения»</string>
    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>
</resources>