<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:id="@+id/solar_flare_begin_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solar_flare_begin_time"/>

    <TextView
        android:id="@+id/solar_flare_peak_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solar_flare_peak_time"/>

    <TextView
        android:id="@+id/solar_flare_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solar_flare_end_time"/>

    <TextView
        android:id="@+id/solar_flare_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/solar_flare_location"/>



</LinearLayout>